objects/Song__c.object
<CustomObject>
    <fields>
        <fullName>Length_Minutes__c</fullName>
        <label>Length Minutes</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Length_Seconds__c</fullName>
        <label>Length Seconds</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Artist__c</fullName>
        <label>Original Artist</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>Value1</fullName>
                    <isActive>false</isActive>
                    <label>Value1</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Proposed</fullName>
                </value>
                <value>
                    <fullName>Value1</fullName>
                    <isActive>false</isActive>
                    <label>Value1</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Song</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Length_Minutes__c</columns>
        <columns>Length_Seconds__c</columns>
        <columns>Rating__c</columns>
        <columns>Original_Artist__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>Song Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Songs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>